erro nos href dos icons arrumado

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<a href="criptomoedas.html"><img src="bit.ico" alt="CRIPTOMOEDAS" class="r30p"></a>
 
-				<a href="deposito.html"><img src="bank.ico" alt="BANCO"></a>
+				<a href="depositar.html"><img src="bank.ico" alt="BANCO"></a>
 			
 			</ul>
 		</div>
@@ -96,7 +96,7 @@
 
 				<a href="criptomoedas.html"><img src="bit.ico" alt="CRIPTOMOEDAS" class="r30p" id="Cripto1"></a>
 
-				<a href="deposito.html"><img src="bank.ico" alt="BANCO" id="Bank1"></a>
+				<a href="depositar.html"><img src="bank.ico" alt="BANCO" id="Bank1"></a>
 			
 			</ul>
 		</div>
