Qr code atualizado

--- a/criptomoedas.html
+++ b/criptomoedas.html
@@ -103,7 +103,7 @@
 
 	<p>Caso esteja usando Computador/Notebook</p>
 	<p class="uppercase" style="margin-bottom: 50px;">escaneie o código qr</p>
-	<p style="margin-top: -110px; margin-bottom: 50px;" id="sqr"><a href="codepix.jpg" style="text-decoration: none;" class="uppercase">Clique aqui para ver o qr code!</a></p>
+	<p style="margin-top: -110px; margin-bottom: 50px;" id="sqr"><a href="codebit.jpg" style="text-decoration: none;" class="uppercase">Clique aqui para ver o qr code!</a></p>
 	<p style="margin-bottom: 200px;"><strong class="uppercase">Veja também:</strong> As 5 melhores corretoras que não exigem verificação de KYC - <strong class="uppercase"><a href="https://www.google.com/url?q=https%3A%2F%2Fbitcoinnews.com.br%2Fbitcoinbrasil%2Fas-5-melhores-corretoras-que-nao-exigem-verificacao-de-kyc%2F&sa=D&sntz=1&usg=AFQjCNHYMkJ7rpk48BpFsxkZryc4ShsFdQ" style="text-decoration: none;">CLIQUE AQUI!</a></strong></p>
 	</div>
 
