--- a/pix.html
+++ b/pix.html
@@ -101,7 +101,7 @@
 
 	<p>Caso esteja usando Computador/Notebook</p>
 	<p class="uppercase" style="margin-bottom: 120px;">escaneie o código qr</p>
-	<p style="margin-top: -110px; margin-bottom: 120px;" id="sqr"><a href="codepix.jpg" style="text-decoration: none;" class="uppercase">Clique aqui para ver o qr code!</a></p>
+	<p style="margin-top: -110px; margin-bottom: 120px;" id="sqr"><a href="mobpixcode.png" style="text-decoration: none;" class="uppercase">Clique aqui para ver o qr code!</a></p>
 	</div>
 
 
