--- a/pix.html
+++ b/pix.html
@@ -17,11 +17,11 @@
 <div class="icons1">
 			<ul>
 
-				<a href="pix.html"><img src="pix.ico" alt="PIX" class="r30p"></a>
+				<a href="pix"><img src="pix.ico" alt="PIX" class="r30p"></a>
 
-				<a href="criptomoedas.html"><img src="bit.ico" alt="CRIPTOMOEDAS" class="r30p"></a>
+				<a href="criptomoedas"><img src="bit.ico" alt="CRIPTOMOEDAS" class="r30p"></a>
 
-				<a href="depositar.html"><img src="bank.ico" alt="BANCO"></a>
+				<a href="depositar"><img src="bank.ico" alt="BANCO"></a>
 			
 			</ul>
 		</div>
@@ -38,13 +38,13 @@
 
 <ul>
 
-	<li><a href="#" class="menu1" id="inicio">Inicio<a href="index.html" class="menu1" id="inicio1">Clique aqui</a></a></li>
+	<li><a href="#" class="menu1" id="inicio">Inicio<a href="index" class="menu1" id="inicio1">Clique aqui</a></a></li>
 	
 	<li><a href="#" class="menu1" id="pagarcom1">Doar<a href="#" class="menu1" id="pagarcom2">Doar com</a></a>
 <ul>
-	<li><a href="#" id="pagar1">Pix<a href="pix.html" id="pagar2">Transferir</a></a></li>
-	<li><a href="#" id="pagar1">Criptomoedas<a href="criptomoedas.html" id="pagar2">Transferir</a></a></li>
-	<li><a href="#" id="pagar1">Depósito<a href="depositar.html" id="pagar2">Depositar</a></a></li>
+	<li><a href="#" id="pagar1">Pix<a href="pix" id="pagar2">Transferir</a></a></li>
+	<li><a href="#" id="pagar1">Criptomoedas<a href="criptomoedas" id="pagar2">Transferir</a></a></li>
+	<li><a href="#" id="pagar1">Depósito<a href="depositar" id="pagar2">Depositar</a></a></li>
 </ul>
 	</li>
 
@@ -58,9 +58,9 @@
 
 	<li><a href="#" class="menu1" id="gps1">Grupos<a href="#" class="menu1" id="gps2">Escolha</a></a>
 		<ul>
-	<li><a href="shitpost.html">Shitpost</a></li>
-	<li><a href="gore.html">Gore</a></li>
-	<li><a href="grupos.html">Ir para grupos</a></li>
+	<li><a href="shitpost">Shitpost</a></li>
+	<li><a href="gore">Gore</a></li>
+	<li><a href="grupos">Ir para grupos</a></li>
 		</ul>
 
 	</li>
@@ -75,6 +75,7 @@
 
 </nav>
 </header>
+
 
 <div class="uppercase" style="margin: 15px; font-size: 20px;">
 	
