--- a/depositar.html
+++ b/depositar.html
@@ -84,7 +84,7 @@
 <div class="uppercase" style="margin: 15px; font-size: 20px;">
 	<center>
 
-		<p id="depoav">A opcão de depósito está inativa mas você ainda pode pagar com <a href="pix.html">pix</a> ou <a href="criptomoedas.html">criptomoedas</a> :)</p>
+		<p id="depoav">A opcão de depósito está inativa mas você ainda pode pagar com <a href="pix">pix</a> ou <a href="criptomoedas">criptomoedas</a> :)</p>
 		
 
 	</center>
